기초교육 수정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,27 +38,26 @@
         <activity
             android:name=".learning_space.screen.PracticeAppMove2Activity"
             android:exported="false" />
+
         <activity
             android:name=".learning_space.screen.PracticeAppMoveActivity"
             android:exported="false" />
+
         <activity
             android:name=".learning_space.screen.PracticeTopBarActivity"
             android:exported="false" />
         <activity
             android:name=".learning_space.screen.PracticeScreenLock2Activity"
             android:exported="false" />
+
         <activity
             android:name=".APItestActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            android:exported="false"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
         <activity
             android:name=".learning_space.screen.PracticeScreenLockActivity"
             android:exported="false" />
+
         <activity
             android:name=".my_profile.CheckMyResultActivity"
             android:exported="false" />
@@ -67,21 +66,12 @@
             android:exported="false" />
         <activity
             android:name=".learning_space.activity.ExamProblemActivity"
-            android:exported="true">
-<!--            <intent-filter>-->
-<!--            <action android:name="android.intent.action.MAIN" />-->
-<!--            <category android:name="android.intent.category.LAUNCHER" />-->
-<!--        </intent-filter>-->
-        </activity>
+            android:exported="false"/>
+
         <activity
             android:name=".learning_space.NewScreenPracticeActivity"
-            android:exported="true" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            android:exported="false" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
         <!-- 아이디찾기/비밀번호변경 화면 -->
         <activity
             android:name=".FindIdPasswordActivity"
@@ -95,13 +85,8 @@
         <!-- 로그인 화면 -->
         <activity
             android:name=".LoginActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            android:exported="false"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
 
         <!-- 화면구성 -->
         <activity
@@ -144,13 +129,8 @@
         <activity
             android:name=".edu_space.default_app.message.activity.DefaultMessageChattingActivity"
 
-            android:exported="true"> <!-- 메시지 화면 -->
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity><!-- 메시지채팅 화면 -->
+            android:exported="false"/> <!-- 메시지 화면 -->
+            <!-- 메시지채팅 화면 -->
         <!-- 채팅 방법 선택 -->
         <!-- 메시지 화면 -->
         <activity
@@ -171,35 +151,44 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:exported="false"/>
+
         <activity
             android:name=".EduSpaceActivity"
             android:exported="false" />
         <activity
             android:name=".edu_space.icon_edu.activity.BasicEduMainActivity"
-            android:exported="false" />
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".edu_space.icon_edu.activity.IconEduActivity"
             android:exported="false" />
+
         <activity
             android:name=".edu_space.default_app.todo.MenusActivity"
             android:exported="false" />
         <activity
             android:name=".edu_space.icon_edu.activity.IconDetailActivity"
-
-            android:exported="false" />><!--1강-->
+            android:exported="false" /><!--1강-->
 
         <activity
             android:name=".edu_space.move_edu.activity.MoveEduActivity"
-            android:exported="false" />
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".edu_space.move_edu.activity.MoveDetailActivity"
             android:exported="false" />
+
         <activity
             android:name=".edu_space.screen_layout.ScreenLayoutActivity"
             android:exported="false" />
@@ -227,13 +216,8 @@
             android:exported="false" />
         <activity
             android:name=".edu_space.settingedu2.Setting2FontActivity"
-
-            android:exported="true"> <!-- 계정생성 교육 -->
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity> <!-- 계정생성 -->
+            android:exported="false"/> <!-- 계정생성 교육 -->
+            <!-- 계정생성 -->
         <activity
             android:name=".edu_space.accountedu.GoogleMainActivity"
             android:exported="false" />
@@ -269,13 +253,8 @@
             android:exported="false" />
         <activity
             android:name=".edu_space.appinstall.AppInstallMainActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity> <!-- 병윤님 앱 설치 메인 화면 -->
+            android:exported="false"/>
+             <!-- 병윤님 앱 설치 메인 화면 -->
 
         <activity
             android:name=".edu_space.appinstall.AppInstallSearchActivity"
