--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,8 @@
             android:exported="true">
 
         </activity>
+        <activity android:name=".learning_space.activity.ExamResultListActivity"
+            android:exported="false" />
 
         <activity
             android:name=".learning_space.screen.PracticeWebViewActivity"
