--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,16 +18,16 @@
         android:theme="@style/Theme.Synergy"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
-
-        <!--고정 SplashActivity-->
+        <activity
+            android:name=".learning_space.activity.ExamResultTestActivity"
+            android:exported="false" />
+        <!-- 고정 SplashActivity -->
         <activity
             android:name=".SplashActivity"
-            android:exported="true">
-
-        </activity>
-        <activity android:name=".learning_space.activity.ExamResultListActivity"
+            android:exported="true"></activity>
+        <activity
+            android:name=".learning_space.activity.ExamResultListActivity"
             android:exported="false" />
-
         <activity
             android:name=".learning_space.screen.PracticeWebViewActivity"
             android:exported="false" />
@@ -70,31 +70,27 @@
         <activity
             android:name=".learning_space.activity.ExamProblemActivity"
             android:exported="true">
-<!--            <intent-filter>-->
-<!--            <action android:name="android.intent.action.MAIN" />-->
-<!--            <category android:name="android.intent.category.LAUNCHER" />-->
-<!--        </intent-filter>-->
+
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
+            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+            <!-- </intent-filter> -->
         </activity>
         <activity
             android:name=".learning_space.NewScreenPracticeActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <!-- 아이디찾기/비밀번호변경 화면 -->
+        </activity> <!-- 아이디찾기/비밀번호변경 화면 -->
         <activity
             android:name=".FindIdPasswordActivity"
-            android:exported="false"/>
-
-        <!-- 회원가입 화면 -->
+            android:exported="false" /> <!-- 회원가입 화면 -->
         <activity
             android:name=".RegisterActivity"
-            android:exported="false"/>
-
-        <!-- 로그인 화면 -->
+            android:exported="false" /> <!-- 로그인 화면 -->
         <activity
             android:name=".LoginActivity"
             android:exported="true">
@@ -103,9 +99,7 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
-        <!-- 화면구성 -->
+        </activity> <!-- 화면구성 -->
         <activity
             android:name=".edu_space.screen_layout.ScreenRecentlyActivity"
             android:exported="false" />
@@ -129,8 +123,7 @@
             android:exported="false" />
         <activity
             android:name=".edu_space.default_app.todo.DefaultMenuActivity"
-            android:exported="false" /><!-- 병윤님|화면구성 메뉴화면-->
-
+            android:exported="false" /> <!-- 병윤님|화면구성 메뉴화면 -->
         <activity
             android:name=".edu_space.default_app.todo.DefaultAppAddActivity"
             android:exported="false" />
@@ -145,14 +138,13 @@
             android:exported="false" />
         <activity
             android:name=".edu_space.default_app.message.activity.DefaultMessageChattingActivity"
-
             android:exported="true"> <!-- 메시지 화면 -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity><!-- 메시지채팅 화면 -->
+        </activity> <!-- 메시지채팅 화면 -->
         <!-- 채팅 방법 선택 -->
         <!-- 메시지 화면 -->
         <activity
@@ -161,7 +153,6 @@
         <activity
             android:name=".edu_space.default_app.message.activity.DefaultMessageSelectActivity"
             android:exported="false" />
-
         <activity
             android:name=".edu_space.naver.activity.NaverSearchResultActivity"
             android:exported="false" />
@@ -176,6 +167,7 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -193,9 +185,7 @@
             android:exported="false" />
         <activity
             android:name=".edu_space.icon_edu.activity.IconDetailActivity"
-
-            android:exported="false" />><!--1강-->
-
+            android:exported="false" /> <!-- 1강 -->
         <activity
             android:name=".edu_space.move_edu.activity.MoveEduActivity"
             android:exported="false" />
@@ -222,17 +212,16 @@
             android:exported="false" />
         <activity
             android:name=".edu_space.settingedu2.Setting2MainActivity"
-
             android:exported="false" /> <!-- <activity -->
         <activity
             android:name=".edu_space.settingedu2.Setting2DisplayActivity"
             android:exported="false" />
         <activity
             android:name=".edu_space.settingedu2.Setting2FontActivity"
-
             android:exported="true"> <!-- 계정생성 교육 -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity> <!-- 계정생성 -->
@@ -278,7 +267,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity> <!-- 병윤님 앱 설치 메인 화면 -->
-
         <activity
             android:name=".edu_space.appinstall.AppInstallSearchActivity"
             android:exported="false" />
