--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,19 +19,10 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".learning_space.activity.ExamResultTestActivity"
+            android:name=".learning_space.activity.ExampleProblem5Activity"
             android:exported="false" />
-        <!-- 고정 SplashActivity -->
         <activity
-            android:name=".SplashActivity"
-            android:exported="true" >
-        </activity>
-        <activity
-            android:name=".MainActivity"
-            android:exported="true">
-        </activity>
-        <activity
-            android:name=".LoginActivity"
+            android:name=".learning_space.activity.ExamProblemActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -40,11 +31,49 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".learning_space.activity.ExamResultListActivity"
+            android:name=".learning_space.screen.PracticeRecentlyDefaultActivity"
             android:exported="true">
         </activity>
         <activity
+            android:name=".learning_space.screen.PracticeRecentlyActivity"
+            android:exported="false" />
+        <activity
+            android:name=".learning_space.activity.ExamProblem4Activity"
+            android:exported="false" />
+        <activity
+            android:name=".edu_space.screen_layout.ScreenRecentlyActivity"
+            android:exported="true">
+
+        </activity>
+        <activity
+            android:name=".learning_space.screen.PracticeScreenTopScroll2Activity"
+            android:exported="false" />
+        <activity
+            android:name=".learning_space.activity.ExamProblem2Activity"
+            android:exported="false" />
+        <activity
+            android:name=".learning_space.activity.ExamResultTestActivity"
+            android:exported="false" /> <!-- 고정 SplashActivity -->
+        <activity
+            android:name=".SplashActivity"
+            android:exported="true" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="true" />
+        <activity
+            android:name=".LoginActivity"
+            android:exported="true" />
+        <activity
+            android:name=".learning_space.activity.ExamProblem3Activity"
+            android:exported="true" />
+        <activity
+            android:name=".learning_space.activity.ExamResultListActivity"
+            android:exported="true" />
+        <activity
             android:name=".learning_space.screen.PracticeWebViewActivity"
+            android:exported="false" />
+        <activity
+            android:name=".learning_space.screen.PracticeScreenTopScrollActivity"
             android:exported="false" />
         <activity
             android:name=".learning_space.intent.LearningDefaultAppActivity"
@@ -63,8 +92,7 @@
             android:exported="false" />
         <activity
             android:name=".APItestActivity"
-            android:exported="true">
-        </activity>
+            android:exported="true" />
         <activity
             android:name=".learning_space.screen.PracticeScreenLockActivity"
             android:exported="false" />
@@ -73,16 +101,10 @@
             android:exported="false" />
         <activity
             android:name=".my_profile.MyExamResultActivity"
-            android:exported="false" />
-        <activity
-            android:name=".learning_space.activity.ExamProblemActivity"
-            android:exported="true">
-
-            <!-- <intent-filter> -->
-            <!-- <action android:name="android.intent.action.MAIN" /> -->
-            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
-            <!-- </intent-filter> -->
-        </activity>
+            android:exported="false" /> <!-- <intent-filter> -->
+        <!-- <action android:name="android.intent.action.MAIN" /> -->
+        <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+        <!-- </intent-filter> -->
         <activity
             android:name=".learning_space.NewScreenPracticeActivity"
             android:exported="true">
@@ -91,19 +113,15 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity> 
-        <!-- 아이디찾기/비밀번호변경 화면 -->
+        </activity> <!-- 아이디찾기/비밀번호변경 화면 -->
         <activity
             android:name=".FindIdPasswordActivity"
             android:exported="false" /> <!-- 회원가입 화면 -->
         <activity
             android:name=".RegisterActivity"
-            android:exported="false" /> <!-- 로그인 화면 --><!-- 화면구성 -->
-
+            android:exported="false" /> <!-- 로그인 화면 -->
         <!-- 화면구성 -->
-        <activity
-            android:name=".edu_space.screen_layout.ScreenRecentlyActivity"
-            android:exported="false" />
+        <!-- 화면구성 -->
         <activity
             android:name=".edu_space.screen_layout.ScreenHomeActivity"
             android:exported="false" />
@@ -133,9 +151,7 @@
             android:exported="false" />
         <activity
             android:name=".edu_space.default_app.todo.DefaultHomeActivity"
-            android:exported="false" />
-
-        <!-- 메시지 화면 -->
+            android:exported="false" /> <!-- 메시지 화면 -->
         <activity
             android:name=".edu_space.default_app.message.activity.DefaultMessageActivity"
             android:exported="false" />
@@ -148,7 +164,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity> <!-- 메시지채팅 화면 -->
-            <!-- 메시지채팅 화면 -->
+        <!-- 메시지채팅 화면 -->
         <!-- 채팅 방법 선택 -->
         <!-- 메시지 화면 -->
         <activity
@@ -181,9 +197,6 @@
         <activity
             android:name=".edu_space.icon_edu.activity.IconDetailActivity"
             android:exported="false" /> <!-- 1강 -->
-        <activity
-            android:name=".edu_space.move_edu.activity.MoveEduActivity"
-            android:exported="false" />
         <activity
             android:name=".edu_space.move_edu.activity.MoveDetailActivity"
             android:exported="false" />
@@ -219,8 +232,7 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-            <!-- 계정생성 -->
+        </activity> <!-- 계정생성 -->
         <activity
             android:name=".edu_space.accountedu.GoogleMainActivity"
             android:exported="false" />
@@ -287,7 +299,6 @@
         <activity
             android:name=".edu_space.naver.activity.NaverSearchInfoActivity"
             android:exported="false" />
-
         <activity
             android:name=".learning_space.intent.LearningGoogleActivity"
             android:exported="false" />
@@ -295,8 +306,8 @@
             android:name=".learning_space.intent.LearningIconActivity"
             android:exported="false" />
         <activity
-        android:name=".learning_space.intent.LearningInstallActivity"
-        android:exported="false" />
+            android:name=".learning_space.intent.LearningInstallActivity"
+            android:exported="false" />
         <activity
             android:name=".learning_space.intent.LearningNaverActivity"
             android:exported="false" />
@@ -309,7 +320,6 @@
         <activity
             android:name=".learning_space.intent.LearningKakaotalkActivity"
             android:exported="false" />
-
     </application>
 
 </manifest>
