--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,16 @@
             android:name=".SplashActivity"
             android:exported="true" >
         </activity>
+
+        <activity
+            android:name=".LoginActivity"
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -68,15 +78,7 @@
         <activity
             android:name=".learning_space.activity.ExamResultTestActivity"
             android:exported="false" /> <!-- 고정 SplashActivity -->
-        <activity
-            android:name=".SplashActivity"
-            android:exported="true" />
-        <activity
-            android:name=".MainActivity"
-            android:exported="true" />
-        <activity
-            android:name=".LoginActivity"
-            android:exported="true" />
+
         <activity
             android:name=".learning_space.activity.ExamProblem3Activity"
             android:exported="true" />
