--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,17 +19,17 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".learning_space.activity.ExampleProblem5Activity"
+            android:name=".learning_space.screen.PracticeResultActivity"
             android:exported="false" />
-        <!-- 고정 SplashActivity -->
+        <activity
+            android:name=".learning_space.activity.ExampleProblem5Activity"
+            android:exported="false" /> <!-- 고정 SplashActivity -->
         <activity
             android:name=".SplashActivity"
-            android:exported="true" >
-        </activity>
-
+            android:exported="true"></activity>
         <activity
             android:name=".LoginActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -56,8 +56,7 @@
         </activity>
         <activity
             android:name=".learning_space.screen.PracticeRecentlyDefaultActivity"
-            android:exported="true">
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".learning_space.screen.PracticeRecentlyActivity"
             android:exported="false" />
@@ -66,9 +65,7 @@
             android:exported="false" />
         <activity
             android:name=".edu_space.screen_layout.ScreenRecentlyActivity"
-            android:exported="true">
-
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".learning_space.screen.PracticeScreenTopScroll2Activity"
             android:exported="false" />
@@ -78,7 +75,6 @@
         <activity
             android:name=".learning_space.activity.ExamResultTestActivity"
             android:exported="false" /> <!-- 고정 SplashActivity -->
-
         <activity
             android:name=".learning_space.activity.ExamProblem3Activity"
             android:exported="true" />
