--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,15 +26,17 @@
             android:exported="false" /> <!-- 고정 SplashActivity -->
         <activity
             android:name=".SplashActivity"
-            android:exported="true"></activity>
-        <activity
-            android:name=".LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".LoginActivity"
+            android:exported="true">
+
         </activity>
         <activity
             android:name=".CheckLearningAbilityActivity"
