--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,7 +38,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".LoginActivity"
+            android:name=".com.sungkyul.synergy.Login.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -140,10 +140,10 @@
             </intent-filter>
         </activity> <!-- 아이디찾기/비밀번호변경 화면 -->
         <activity
-            android:name=".FindIdPasswordActivity"
+            android:name=".com.sungkyul.synergy.Login.FindIdPasswordActivity"
             android:exported="true" /> <!-- 회원가입 화면 -->
         <activity
-            android:name=".RegisterActivity"
+            android:name=".com.sungkyul.synergy.Login.RegisterActivity"
             android:exported="true" /> <!-- 로그인 화면 -->
         <!-- 화면구성 -->
         <activity
