--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -126,10 +126,7 @@
             android:exported="false" />
         <activity
             android:name=".my_profile.MyExamResultActivity"
-            android:exported="false" /> <!-- <intent-filter> -->
-        <!-- <action android:name="android.intent.action.MAIN" /> -->
-        <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
-        <!-- </intent-filter> -->
+            android:exported="false" /> 
         <activity
             android:name=".learning_space.NewScreenPracticeActivity"
             android:exported="true">
@@ -181,12 +178,10 @@
             android:exported="false" />
         <activity
             android:name=".edu_space.default_app.message.activity.DefaultMessageChattingActivity"
-            android:exported="true"> <!-- 메시지 화면 -->
+            android:exported="true">
 
-        </activity> <!-- 메시지채팅 화면 -->
-        <!-- 메시지채팅 화면 -->
+        </activity>
         <!-- 채팅 방법 선택 -->
-        <!-- 메시지 화면 -->
         <activity
             android:name=".edu_space.default_app.message.activity.DefaultMessageFristActivity"
             android:exported="false" /> <!-- 메시지채팅 화면 -->
