실습문제 조회 오류수정, 아이디 비밀번호 찾기 수정중
실습문제 조회 오류수정, 아이디 비밀번호 찾기 수정중

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,11 @@
         android:theme="@style/Theme.Synergy"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+
+        <activity
+            android:name=".home.activity.ChangePasswordActivity"
+            android:exported="true">
+        </activity>
         <activity
             android:name=".training_space.screen.PracticeCheckExamActivity"
             android:exported="true">
