시북이가 직접 등장해서 설명하는 기능 완성

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,15 +18,15 @@
         android:theme="@style/Theme.Synergy"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
-
+        <activity
+            android:name=".learning_space.screen_layout.ScreenFirstActivity"
+            android:exported="false" />
         <activity
             android:name=".home.activity.ChangePasswordActivity"
-            android:exported="true">
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".training_space.screen.PracticeCheckExamActivity"
-            android:exported="true">
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".training_space.screen.PracticeResultActivity"
             android:exported="false" />
@@ -279,7 +279,6 @@
         <activity
             android:name=".learning_space.accountedu.GoogleMailAddActivity"
             android:exported="false" />
-
         <activity
             android:name=".learning_space.appinstall.AppInstallMainActivity"
             android:exported="true">
