--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,14 +19,17 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".learning_space.settingedu.SettingsFirstActivity"
+            android:exported="false" />
+        <activity
             android:name=".learning_space.screen_layout.ScreenFirstActivity"
             android:exported="false" />
         <activity
             android:name=".home.activity.ChangePasswordActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".training_space.screen.PracticeCheckExamActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".training_space.screen.PracticeResultActivity"
             android:exported="false" />
