--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,12 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".learning_space.default_app.phone.activity.DefaultPhoneFirstActivity"
+            android:exported="false" />
+        <activity
+            android:name=".courses.default_app.phone.DefaultPhoneFirstCourse"
+            android:exported="false" />
+        <activity
             android:name=".learning_space.settingedu.SettingsFirstActivity"
             android:exported="false" />
         <activity
