--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".learning_space.kakaotalk.activity.KakaoFirstActivity"
+            android:exported="false" />
+        <activity
             android:name=".learning_space.default_app.message.activity.DefaultMessageFirstActivity"
             android:exported="false" />
         <activity
